--- a/wowtrade/styles/globals.css
+++ b/wowtrade/styles/globals.css
@@ -25,3 +25,11 @@ a {
         background: black;
     }
 }
+
+.text-muted {
+    color: white !important;
+}
+
+a {
+    color: white !important;
+}
