fix: Styling tweaks

--- a/wowtrade/styles/custom.scss
+++ b/wowtrade/styles/custom.scss
@@ -1,4 +1,5 @@
 $body-bg: rgb(20, 25, 30);
 $body-color: white;
+$form-check-input-border: 1px solid white;
 
 @import "node_modules/bootstrap/scss/bootstrap";
