fix: Styling tweaks

--- a/wowtrade/styles/custom.scss
+++ b/wowtrade/styles/custom.scss
@@ -3,3 +3,7 @@ $body-color: white;
 $form-check-input-border: 1px solid white;
 
 @import "node_modules/bootstrap/scss/bootstrap";
+
+a {
+  color: white !important;
+}
